# astralith

./: .cnb.yml  .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  sync-cnb.yml
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  common.py  gitops.py  host.py  operation_module.py  scheduled_job.py  task.py  user.py
backend/app/operation_modules/: __init__.py  base.py  (+1 more)
backend/tests/: conftest.py  test_ai_analysis_v050.py  test_ai_gitops_proposals_v090.py  test_auth_v030.py  test_dashboard_summary_v101.py  test_database_schema.py  test_execution_v020.py  test_gitops_apply_v080.py  test_gitops_diff_v070.py  test_gitops_v060.py  test_health.py  test_operation_module_proposals_v100.py  test_operation_module_workbench_v102.py  test_operation_modules.py  test_scheduled_execution_v040.py  test_security.py  test_task_incident_flow_v103.py  test_v010_api.py
docs/: api-design.md  architecture.md  database-design.md  deployment.md  development-roadmap.md  frontend-i18n.md  gitops-ai-roadmap.md  graduation-design-notes.md
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: verify_v050_real.py  verify_v060_real.py  verify_v070_real.py  verify_v080_real.py  verify_v090_real.py  verify_v100_real.py  verify_v101_real.py  verify_v105_real.py
(+66 files in other folders)
