[project]
name = "astralith"
version = "0.2.0"
description = "Lightweight FastAPI and Ansible automated operations platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyJWT[crypto]>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "ansible-runner>=2.4.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
